# simple-telegram-temp

./: .env.example  .gitignore  README.MD  bot_handlers.py  db_utils.py  initdb.py  llm_utils.py  main.py  paypal.py  pyproject.toml  standalone.py
sandbox/: bot_handlers.py  chatbot.sqlite  db_utils.py  initdb.py
